manifest/ELK/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "4Gi"
              cpu: "3000m"
            requests:
              memory: "1Gi"
              cpu: "300m"
          ports:
            - name: http
              containerPort: 9200
          volumeMounts:
            - name: elasticsearch-volume
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-volume
      spec:
        storageClassName: nfs-client
        accessModes: ["ReadWriteMany"]
        resources:
          requests:
            storage: 5Gi
