manifest/ELK/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:
    app: kibana
  ports:
    - name: http
      port: 5601
      targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    name: kibana
spec:
  replicas: 1
  selector:
  matchLabels:
    app: kibana
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
          imagePullPolicy: IfNotPresent
          name: kibana
          resources:
            requests:
              cpu: "100m"
              memory: "245Mi"
          ports:
            - containerPort: 5601
              name: http
          readinessProbe:
            httpGet:
              path: /api/status
              port: http
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
